Fix error related to getColumn method change